# immich-ml-metal

./: .gitignore  README.md  pyproject.toml  requirements.txt
